# Option_Strategy

./: .dockerignore  .env  .gitignore  AUDIT_CORRECTIONS.md  CHANGELOG.md  Dockerfile  GUIDE_INSTALLATION_GITHUB.md  GUIDE_NON_TECH.md  GUIDE_WINDOWS.md  INSTALLATION_RAPIDE.md  OPTIMIZATION_NOTES.md  Option Strategy.spec  README.md  README_GITHUB.md  RÉSUMÉ_SCORING.md  SCORING_COMPLET.md  WORKFLOW_INTEGRATION.md  alarm.json  app.py  benchmark_cpp_vs_python.py  bloomberg_connector.py  bloomberg_import_20251020_145643.json  build_exe.bat  calls_export.json  check.sh  debug_cpp.py  debug_surfaces.py  desktop_app.py  git_helper.sh  gitpush.ps1  import_bloom.cpp  import_bloom.py  install.bat  install.sh  intra_life.md  pyproject.toml  rebuild.bat  rebuild_cpp.bat  rebuild_cpp.sh  requirements.txt  (+20 more)
.github/workflows/: python-tests.yml  release.yml  tests.yml
backtesting/: config.py  main.py
backtesting/bloomberg/: __init__.py  bdh_fetcher.py  ticker_builder.py
backtesting/distrib_proba/: density_analysis.py  implied_distribution.py
backtesting/strategy/: backtest_engine.py  option_builder.py  results.py
docs/: CPP_GUIDE.md  CPP_SCORING_GUIDE.md  INTRA_LIFE_PRICING.md  PIPELINE_UPDATE.md  backtesting.md  backtesting_strategy_documentation.md  bdh_fetcher_documentation.md
generation_cpp/: CMakeLists.txt  bindings.cpp  pyproject.toml  setup.py  strategy_calculs.cpp  strategy_filters.cpp  strategy_metrics.cpp  strategy_metrics.hpp  strategy_scoring.cpp  strategy_scoring.hpp
generation_cpp/stubs/: strategy_metrics_cpp.pyi
src/: __init__.py  app.py  async_processing.py  bloomberg_data_importer.py  data.py  generate_full_database.py  main.py  serveur_socket.py  strategies.py  strategies_v2_generic.py  strategy_comparison.py  test_fly_bloomberg.py  test_integration_app.py
src/Bloomberg/: bloomber_to_opt.py  bloomberg_data_importer.py  connection.py  fetcher_batch.py  ticker_builder.py
src/Options/: __init__.py  option_avaible.py  option_class.py
src/Strategy/: __init__.py  comparer.py  fly_generator.py  strike_explorer.py
src/alarm/: __init__.py  create_shortcut.py
src/app/: _subprocess_worker.py  app_state.py  chart_types.py  chart_widget.py  data_types.py  main_window.py  splash_screen.py  theme.py  utils.py  widget_comparison.py  widget_params.py  (+3 more)
(+265 files in other folders)
