[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "option-strategy"            
version = "0.1.0"
description = "Option strategy PyQt6 app"
dependencies = []       
             
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}


